# mieli

./: Cargo.toml  README.md
.github/workflows/: publish-binaries.yml  publish-deb-brew-pkg.yml
src/: batches.rs  documents.rs  experimental.rs  format.rs  indexes.rs  inner.rs  interactive_search.rs  keys.rs  log.rs  main.rs  meili.rs  meilisearch.rs  options.rs  tasks.rs
