[package]
name = "mieli"
version = "0.28.2"
edition = "2021"
description = "A cli around Meilisearch"
readme = "README.md"
homepage = "https://meilisearch.com/"
documentation = "https://docs.meilisearch.com"
license = "WTFPL"
repository = "https://github.com/irevoire/mieli"
keywords = ["meilisearch", "cli", "search", "bears"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
clap = { version = "4.3.0", features = ["derive", "env", "unicode"] }
clap_complete = "4.3.0"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "blocking", "json"] }
termion = "2.0.1"
serde_json = { version = "1.0.96", features = ["preserve_order"] }
indicatif = "0.17.3"
inquire = "0.2.1"
colored_json = "2.1.0"
miette = { version = "5.9.0", features = ["fancy"] }
yaup = "0.3.1"
serde = { version = "1.0.163", features = ["serde_derive"] }
serde-cs = "0.2.4"
dialoguer = "0.10.4"
tempfile = "3.5.0"
log = "0.4.22"
env_logger = "0.11.6"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"
