[package]
name = "mieli"
version = "0.28.2"
edition = "2021"
description = "A cli around Meilisearch"
readme = "README.md"
homepage = "https://meilisearch.com/"
documentation = "https://docs.meilisearch.com"
license = "WTFPL"
repository = "https://github.com/irevoire/mieli"
keywords = ["meilisearch", "cli", "search", "bears"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
clap = { version = "4.5.26", features = ["derive", "env", "unicode"] }
clap_complete = "4.5.42"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
termion = "4.0.3"
serde_json = { version = "1.0.135", features = ["preserve_order"] }
indicatif = "0.17.9"
inquire = "0.2.1"
colored_json = "5.0.0"
miette = { version = "7.4.0", features = ["fancy"] }
yaup = "0.3.1"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde-cs = "0.2.4"
dialoguer = "0.11.0"
tempfile = "3.15.0"
log = "0.4.25"
env_logger = "0.11.6"
ctrlc = "3.4.5"
tracing-trace = { git = "https://github.com/meilisearch/meilisearch", tag = "v1.12.0" }
# tracing-trace = { path = "/home/irevoire/Meilisearch/crates/tracing-trace" }
time = "0.3.37"

[profile.release]
# opt-level = "z"  # Optimize for size.
# lto = true
# panic = "abort"
